タイトルに改行追加、テーブルにidを追加

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>風来のシレン　アイテム判別</h1>
+    <h1>風来のシレン<br>アイテム判別</h1>
     <h3>売値検索</h3>
     <label>売値</label>
     <input type="number" name="sell_value" maxlength="10" value="売値を入力してください">
     <button  onclick="alertHelloWorld()">検索</button>
 
     <h3>検索結果</h3>
-    <table>
+    <table id="result_table">
         <tr>
             <th>アイコン</th><th>種類</th><th>アイテム名</th><th>買値</th><th>売値</th>
         </tr>
