--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ja'>
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <script type="text/javascript" src='./DataBase.js'></script>
     <script type="text/javascript" src='./main.js'></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>風来のシレン アイテム判別</title>
 </head>
 <body>
     <h1>風来のシレン<br>アイテム判別</h1>
