--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>風来のシレン<br>アイテム判別</h1>
     <h3>値段検索</h3>
+    <label><input type="radio" name="searchKey" value="all">全て</label><br>
     <label><input type="radio" name="searchKey" value="buy">買値</label>
     <input id="buyValue" type="number" name="buy_value" maxlength="10" min="0" value="買値を入力してください"><br>
     <label><input type="radio" name="searchKey" value="sell">売値</label>
